--- a/services/ui-src/src/styles/_main.scss
+++ b/services/ui-src/src/styles/_main.scss
@@ -421,16 +421,11 @@ div[data-state="open"] .accordion-header .arrow:before {
 }
 
 .action-buttons {
-  position: relative;
-  text-align: center;
+  text-align: right;
+  margin: 0;
 
-  @media only screen and (min-width: 768px) {
-    text-align: right;
-  }
-
-  &>div {
-    display: block;
-    margin: (variables.$margin * 2) variables.$margin;
+  @media screen and (min-width: 768px) {
+    margin: 0 variables.$margin;
   }
 }
 
